--- a/ex01/nearest-neighbour.ipynb
+++ b/ex01/nearest-neighbour.ipynb
@@ -68,7 +68,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAD8CAYAAABaQGkdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAACtRJREFUeJzt3V2IXPUZx/Hfr6ul9Q2ltVV2Q2NE\nAlKo0RCQgNCYlFhFe1EhAcVKIblRlBYk9q53uRJ7UWRD1AqmSo0KIlabRcUKrXUT09a4saSDJdto\no3TFl0JC4tOLnZQ03TJnM//zMo/fDwR3N8P+nyF8PWdn55y/I0IAcvpC2wMAqA+BA4kROJAYgQOJ\nETiQGIEDiRE4kBiBA4kROJDYGXV8U9sp3x530UUXNbre+Ph4Y2sdOXKksbVmZmYaW+v48eONrdW0\niPCgx9QSeFa33XZbo+tt3bq1sbV6vV5ja61cubKxtebm5hpbq4s4RQcSI3AgMQIHEiNwIDECBxIj\ncCAxAgcSI3AgsUqB215v+23bB2xvqXsoAGUMDNz2mKSfS7pO0uWSNtq+vO7BAAyvyhF8laQDEdGL\niKOSHpd0U71jASihSuDjkg6e9Pls/2sAOq7KxSYLXbHyP1eL2d4kadPQEwEopkrgs5KWnPT5hKRD\npz4oIrZJ2iblvVwUGDVVTtFfl3SZ7Utsf1HSBknP1DsWgBIGHsEj4pjtOyS9IGlM0kMRsa/2yQAM\nrdINHyLiOUnP1TwLgMJ4JxuQGIEDiRE4kBiBA4kROJAYgQOJETiQGIEDiY38ziZN7v5x8803N7aW\nJG3evLmxtSYnJxtb66qrrmpsrampqcbW6iKO4EBiBA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4kRuBA\nYlV2NnnI9mHbbzYxEIByqhzBfyFpfc1zAKjBwMAj4hVJ/2xgFgCF8TM4kFixq8nYugjonmKBs3UR\n0D2cogOJVfk12WOSfidpue1Z2z+sfywAJVTZm2xjE4MAKI9TdCAxAgcSI3AgMQIHEiNwIDECBxIj\ncCAxAgcSc0T5t403+V70ZcuWNbWU5ubmGltLkqanpxtdrymXXnpp2yOkEBEe9BiO4EBiBA4kRuBA\nYgQOJEbgQGIEDiRG4EBiBA4kRuBAYgQOJFblpotLbL9ke8b2Ptt3NTEYgOFVuS/6MUk/jog9ts+V\ntNv2roh4q+bZAAypyt5k70bEnv7HH0uakTRe92AAhreonU1sL5W0QtJrC/wdWxcBHVM5cNvnSHpS\n0t0R8dGpf8/WRUD3VHoV3faZmo97R0Q8Ve9IAEqp8iq6JT0oaSYi7qt/JAClVDmCr5Z0q6Q1tvf2\n/3y35rkAFFBlb7JXJQ28NQyA7uGdbEBiBA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4ktqirybqo1+s1\ntlaT+6A1vd7U1FRja11wwQWNrdX0fnJdwxEcSIzAgcQIHEiMwIHECBxIjMCBxAgcSIzAgcQIHEis\nyk0Xv2T7D7b/2N+66KdNDAZgeFXeqnpE0pqI+KR/++RXbf86In5f82wAhlTlposh6ZP+p2f2/7Cx\nATACqm58MGZ7r6TDknZFxIJbF9metj1dekgAp6dS4BFxPCKukDQhaZXtby7wmG0RsTIiVpYeEsDp\nWdSr6BHxoaSXJa2vZRoARVV5Ff1C2+f3P/6ypLWS9tc9GIDhVXkV/WJJj9ge0/z/EH4VEc/WOxaA\nEqq8iv4nze8JDmDE8E42IDECBxIjcCAxAgcSI3AgMQIHEiNwIDECBxLz/NWghb+pzeWkBTS5xc+u\nXbsaW6tJ69ata3S9JrdKiggPegxHcCAxAgcSI3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgscqB9++N\n/oZt7scGjIjFHMHvkjRT1yAAyqu6s8mEpOslba93HAAlVT2C3y/pHkmf1TgLgMKqbHxwg6TDEbF7\nwOPYmwzomCpH8NWSbrT9jqTHJa2x/eipD2JvMqB7BgYeEfdGxERELJW0QdKLEXFL7ZMBGBq/BwcS\nq7I32X9ExMua310UwAjgCA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4kRuBAYmxdBEnNbpM0OTnZ2Fq9\nXq+xtSRpy5Ytja3F1kXA5xyBA4kROJAYgQOJETiQGIEDiRE4kBiBA4kROJBYpVs29e+o+rGk45KO\ncedUYDQs5p5s346ID2qbBEBxnKIDiVUNPCT9xvZu25vqHAhAOVVP0VdHxCHbX5O0y/b+iHjl5Af0\nwyd+oEMqHcEj4lD/v4clPS1p1QKPYesioGOqbD54tu1zT3ws6TuS3qx7MADDq3KK/nVJT9s+8fhf\nRsTztU4FoIiBgUdET9K3GpgFQGH8mgxIjMCBxAgcSIzAgcQIHEiMwIHECBxIjMCBxBZzPfjn3tat\nWxtdb2pqqrG1mty6aO3atY2t9cQTTzS2VhdxBAcSI3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIH\nEqsUuO3zbe+0vd/2jO2r6x4MwPCqvlX1Z5Kej4jv2/6ipLNqnAlAIQMDt32epGsk/UCSIuKopKP1\njgWghCqn6MskvS/pYdtv2N7evz86gI6rEvgZkq6U9EBErJD0qaQtpz7I9ibb07anC88I4DRVCXxW\n0mxEvNb/fKfmg/8vbF0EdM/AwCPiPUkHbS/vf+laSW/VOhWAIqq+in6npB39V9B7km6vbyQApVQK\nPCL2SuLUGxgxvJMNSIzAgcQIHEiMwIHECBxIjMCBxAgcSIzAgcQIHEiMvckWYW5urtH1JicnG12v\nKU3uF7Z58+bG1uoijuBAYgQOJEbgQGIEDiRG4EBiBA4kRuBAYgQOJEbgQGIDA7e93Pbek/58ZPvu\nJoYDMJyBb1WNiLclXSFJtsck/V3S0zXPBaCAxZ6iXyvprxHxtzqGAVDWYi822SDpsYX+wvYmSZuG\nnghAMZWP4P1ND26UtOClQGxdBHTPYk7Rr5O0JyL+UdcwAMpaTOAb9X9OzwF0U6XAbZ8laZ2kp+od\nB0BJVfcm+5ekr9Q8C4DCeCcbkBiBA4kROJAYgQOJETiQGIEDiRE4kBiBA4k5Isp/U/t9SYu9pPSr\nkj4oPkw3ZH1uPK/2fCMiLhz0oFoCPx22p7NeiZb1ufG8uo9TdCAxAgcS61Lg29oeoEZZnxvPq+M6\n8zM4gPK6dAQHUFgnAre93vbbtg/Y3tL2PCXYXmL7JdsztvfZvqvtmUqyPWb7DdvPtj1LSbbPt73T\n9v7+v93Vbc80jNZP0fv3Wv+L5u8YMyvpdUkbI+KtVgcbku2LJV0cEXtsnytpt6TvjfrzOsH2jySt\nlHReRNzQ9jyl2H5E0m8jYnv/RqNnRcSHbc91urpwBF8l6UBE9CLiqKTHJd3U8kxDi4h3I2JP/+OP\nJc1IGm93qjJsT0i6XtL2tmcpyfZ5kq6R9KAkRcTRUY5b6kbg45IOnvT5rJKEcILtpZJWSHqt3UmK\nuV/SPZI+a3uQwpZJel/Sw/0fP7bbPrvtoYbRhcC9wNfSvLRv+xxJT0q6OyI+anueYdm+QdLhiNjd\n9iw1OEPSlZIeiIgVkj6VNNKvCXUh8FlJS076fELSoZZmKcr2mZqPe0dEZLkj7WpJN9p+R/M/Tq2x\n/Wi7IxUzK2k2Ik6cae3UfPAjqwuBvy7pMtuX9F/U2CDpmZZnGppta/5nuZmIuK/teUqJiHsjYiIi\nlmr+3+rFiLil5bGKiIj3JB20vbz/pWsljfSLoovdm6y4iDhm+w5JL0gak/RQROxreawSVku6VdKf\nbe/tf+0nEfFcizNhsDsl7egfbHqSbm95nqG0/msyAPXpwik6gJoQOJAYgQOJETiQGIEDiRE4kBiB\nA4kROJDYvwFBuZfzuATFqgAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x65b0daf278>"
+       "<matplotlib.figure.Figure at 0x622c04b320>"
       ]
      },
      "metadata": {},
@@ -86,7 +86,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn import model_selection\n",
@@ -107,7 +109,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def dist_loop(training, test):\n",
@@ -131,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.14 s ± 11.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.82 s ± 22.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -148,31 +152,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def dist_vec(training, test):\n",
-    "    D = training.shape[1]\n",
-    "    N = training.shape[0]\n",
-    "    M = test.shape[0]\n",
-    "    dists = np.linalg.norm(training.reshape(N,1,D).repeat(M, axis=1) -\n",
-    "                           test.reshape(1,M,D).repeat(N, axis=0), axis=2)\n",
-    "    return dists"
+    "    return np.linalg.norm(training[:,np.newaxis,:] - test[np.newaxis,:,:], axis=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "608 ms ± 11.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "354 ms ± 13.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -200,15 +199,6 @@
    "source": [
     "## 3 Cross-validation"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
