--- a/ex01/nearest-neighbour.ipynb
+++ b/ex01/nearest-neighbour.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -34,15 +34,15 @@
     "\n",
     "digits = load_digits ()\n",
     "print(digits.keys())\n",
-    "data = digits [\"data\"]\n",
-    "images = digits [\"images\"]\n",
-    "target = digits [\"target\"]\n",
-    "target_names = digits [\"target_names\"]"
+    "data = digits[\"data\"]\n",
+    "images = digits[\"images\"]\n",
+    "target = digits[\"target\"]\n",
+    "target_names = digits[\"target_names\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAD8CAYAAABaQGkdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAACtRJREFUeJzt3V2IXPUZx/Hfr6ul9Q2ltVV2Q2NE\nAlKo0RCQgNCYlFhFe1EhAcVKIblRlBYk9q53uRJ7UWRD1AqmSo0KIlabRcUKrXUT09a4saSDJdto\no3TFl0JC4tOLnZQ03TJnM//zMo/fDwR3N8P+nyF8PWdn55y/I0IAcvpC2wMAqA+BA4kROJAYgQOJ\nETiQGIEDiRE4kBiBA4kROJDYGXV8U9sp3x530UUXNbre+Ph4Y2sdOXKksbVmZmYaW+v48eONrdW0\niPCgx9QSeFa33XZbo+tt3bq1sbV6vV5ja61cubKxtebm5hpbq4s4RQcSI3AgMQIHEiNwIDECBxIj\ncCAxAgcSI3AgsUqB215v+23bB2xvqXsoAGUMDNz2mKSfS7pO0uWSNtq+vO7BAAyvyhF8laQDEdGL\niKOSHpd0U71jASihSuDjkg6e9Pls/2sAOq7KxSYLXbHyP1eL2d4kadPQEwEopkrgs5KWnPT5hKRD\npz4oIrZJ2iblvVwUGDVVTtFfl3SZ7Utsf1HSBknP1DsWgBIGHsEj4pjtOyS9IGlM0kMRsa/2yQAM\nrdINHyLiOUnP1TwLgMJ4JxuQGIEDiRE4kBiBA4kROJAYgQOJETiQGIEDiY38ziZN7v5x8803N7aW\nJG3evLmxtSYnJxtb66qrrmpsrampqcbW6iKO4EBiBA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4kRuBA\nYlV2NnnI9mHbbzYxEIByqhzBfyFpfc1zAKjBwMAj4hVJ/2xgFgCF8TM4kFixq8nYugjonmKBs3UR\n0D2cogOJVfk12WOSfidpue1Z2z+sfywAJVTZm2xjE4MAKI9TdCAxAgcSI3AgMQIHEiNwIDECBxIj\ncCAxAgcSc0T5t403+V70ZcuWNbWU5ubmGltLkqanpxtdrymXXnpp2yOkEBEe9BiO4EBiBA4kRuBA\nYgQOJEbgQGIEDiRG4EBiBA4kRuBAYgQOJFblpotLbL9ke8b2Ptt3NTEYgOFVuS/6MUk/jog9ts+V\ntNv2roh4q+bZAAypyt5k70bEnv7HH0uakTRe92AAhreonU1sL5W0QtJrC/wdWxcBHVM5cNvnSHpS\n0t0R8dGpf8/WRUD3VHoV3faZmo97R0Q8Ve9IAEqp8iq6JT0oaSYi7qt/JAClVDmCr5Z0q6Q1tvf2\n/3y35rkAFFBlb7JXJQ28NQyA7uGdbEBiBA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4ktqirybqo1+s1\ntlaT+6A1vd7U1FRja11wwQWNrdX0fnJdwxEcSIzAgcQIHEiMwIHECBxIjMCBxAgcSIzAgcQIHEis\nyk0Xv2T7D7b/2N+66KdNDAZgeFXeqnpE0pqI+KR/++RXbf86In5f82wAhlTlposh6ZP+p2f2/7Cx\nATACqm58MGZ7r6TDknZFxIJbF9metj1dekgAp6dS4BFxPCKukDQhaZXtby7wmG0RsTIiVpYeEsDp\nWdSr6BHxoaSXJa2vZRoARVV5Ff1C2+f3P/6ypLWS9tc9GIDhVXkV/WJJj9ge0/z/EH4VEc/WOxaA\nEqq8iv4nze8JDmDE8E42IDECBxIjcCAxAgcSI3AgMQIHEiNwIDECBxLz/NWghb+pzeWkBTS5xc+u\nXbsaW6tJ69ata3S9JrdKiggPegxHcCAxAgcSI3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgscqB9++N\n/oZt7scGjIjFHMHvkjRT1yAAyqu6s8mEpOslba93HAAlVT2C3y/pHkmf1TgLgMKqbHxwg6TDEbF7\nwOPYmwzomCpH8NWSbrT9jqTHJa2x/eipD2JvMqB7BgYeEfdGxERELJW0QdKLEXFL7ZMBGBq/BwcS\nq7I32X9ExMua310UwAjgCA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4kRuBAYmxdBEnNbpM0OTnZ2Fq9\nXq+xtSRpy5Ytja3F1kXA5xyBA4kROJAYgQOJETiQGIEDiRE4kBiBA4kROJBYpVs29e+o+rGk45KO\ncedUYDQs5p5s346ID2qbBEBxnKIDiVUNPCT9xvZu25vqHAhAOVVP0VdHxCHbX5O0y/b+iHjl5Af0\nwyd+oEMqHcEj4lD/v4clPS1p1QKPYesioGOqbD54tu1zT3ws6TuS3qx7MADDq3KK/nVJT9s+8fhf\nRsTztU4FoIiBgUdET9K3GpgFQGH8mgxIjMCBxAgcSIzAgcQIHEiMwIHECBxIjMCBxBZzPfjn3tat\nWxtdb2pqqrG1mty6aO3atY2t9cQTTzS2VhdxBAcSI3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIH\nEqsUuO3zbe+0vd/2jO2r6x4MwPCqvlX1Z5Kej4jv2/6ipLNqnAlAIQMDt32epGsk/UCSIuKopKP1\njgWghCqn6MskvS/pYdtv2N7evz86gI6rEvgZkq6U9EBErJD0qaQtpz7I9ibb07anC88I4DRVCXxW\n0mxEvNb/fKfmg/8vbF0EdM/AwCPiPUkHbS/vf+laSW/VOhWAIqq+in6npB39V9B7km6vbyQApVQK\nPCL2SuLUGxgxvJMNSIzAgcQIHEiMwIHECBxIjMCBxAgcSIzAgcQIHEiMvckWYW5urtH1JicnG12v\nKU3uF7Z58+bG1uoijuBAYgQOJEbgQGIEDiRG4EBiBA4kRuBAYgQOJEbgQGIDA7e93Pbek/58ZPvu\nJoYDMJyBb1WNiLclXSFJtsck/V3S0zXPBaCAxZ6iXyvprxHxtzqGAVDWYi822SDpsYX+wvYmSZuG\nnghAMZWP4P1ND26UtOClQGxdBHTPYk7Rr5O0JyL+UdcwAMpaTOAb9X9OzwF0U6XAbZ8laZ2kp+od\nB0BJVfcm+5ekr9Q8C4DCeCcbkBiBA4kROJAYgQOJETiQGIEDiRE4kBiBA4k5Isp/U/t9SYu9pPSr\nkj4oPkw3ZH1uPK/2fCMiLhz0oFoCPx22p7NeiZb1ufG8uo9TdCAxAgcS61Lg29oeoEZZnxvPq+M6\n8zM4gPK6dAQHUFgnAre93vbbtg/Y3tL2PCXYXmL7JdsztvfZvqvtmUqyPWb7DdvPtj1LSbbPt73T\n9v7+v93Vbc80jNZP0fv3Wv+L5u8YMyvpdUkbI+KtVgcbku2LJV0cEXtsnytpt6TvjfrzOsH2jySt\nlHReRNzQ9jyl2H5E0m8jYnv/RqNnRcSHbc91urpwBF8l6UBE9CLiqKTHJd3U8kxDi4h3I2JP/+OP\nJc1IGm93qjJsT0i6XtL2tmcpyfZ5kq6R9KAkRcTRUY5b6kbg45IOnvT5rJKEcILtpZJWSHqt3UmK\nuV/SPZI+a3uQwpZJel/Sw/0fP7bbPrvtoYbRhcC9wNfSvLRv+xxJT0q6OyI+anueYdm+QdLhiNjd\n9iw1OEPSlZIeiIgVkj6VNNKvCXUh8FlJS076fELSoZZmKcr2mZqPe0dEZLkj7WpJN9p+R/M/Tq2x\n/Wi7IxUzK2k2Ik6cae3UfPAjqwuBvy7pMtuX9F/U2CDpmZZnGppta/5nuZmIuK/teUqJiHsjYiIi\nlmr+3+rFiLil5bGKiIj3JB20vbz/pWsljfSLoovdm6y4iDhm+w5JL0gak/RQROxreawSVku6VdKf\nbe/tf+0nEfFcizNhsDsl7egfbHqSbm95nqG0/msyAPXpwik6gJoQOJAYgQOJETiQGIEDiRE4kBiB\nA4kROJDYvwFBuZfzuATFqgAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAD8CAYAAABaQGkdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACr9JREFUeJzt3V+IXOUZx/Hfr6vSWm2V1lbZDU0UCUihRkNAUoRGU2IV\n7UWFBBQrheRGUVqQ2Lve5UrsRZENUSuYKjUqiFgli4oVWusmpq3JxpIOlmzQRumKfy4SEp9e7EmJ\nkjJnMu85c+bx+4HF/TPs+wzh6zkzO3NeR4QA5PSlUQ8AoDkEDiRG4EBiBA4kRuBAYgQOJEbgQGIE\nDiRG4EBiZzTxS22nfHnchRde2Op6k5OTra115MiR1taam5trba3jx4+3tlbbIsL9btNI4Fnddttt\nra63ZcuW1tbq9XqtrbVy5crW1lpYWGhtrS7iFB1IjMCBxAgcSIzAgcQIHEiMwIHECBxIjMCBxGoF\nbnud7bdsH7C9uemhAJTRN3DbE5J+I+k6SZdJ2mD7sqYHAzC8OkfwVZIOREQvIo5KelzSTc2OBaCE\nOoFPSjp40tfz1fcAdFyxN5vY3ihpY6nfB2B4dQI/JGnJSV9PVd/7jIjYKmmrlPftosC4qXOK/rqk\nS20vs32WpPWSnml2LAAl9D2CR8Qx23dIekHShKSHImJv45MBGFqtx+AR8Zyk5xqeBUBhvJINSIzA\ngcQIHEiMwIHECBxIjMCBxAgcSIzAgcTGfmeTNnf/uPnmm1tbS5I2bdrU2lrT09OtrXXllVe2ttbM\nzExra3URR3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEiNwILE6O5s8ZPuw7TfbGAhAOXWO4L+V\ntK7hOQA0oG/gEfGKpP+0MAuAwngMDiTG1kVAYsUCZ+sioHs4RQcSq/Nnssck/UnSctvztn/W/FgA\nSqizN9mGNgYBUB6n6EBiBA4kRuBAYgQOJEbgQGIEDiRG4EBiBA4k5ojyLxtv87XoF198cVtLaWFh\nobW1JGl2drbV9dpyySWXjHqEFCLC/W7DERxIjMCBxAgcSIzAgcQIHEiMwIHECBxIjMCBxAgcSIzA\ngcTqXHRxie2XbO+zvdf2XW0MBmB4da6LfkzSLyJit+1zJe2yvTMi9jU8G4Ah1dmb7J2I2F19/pGk\nOUmTTQ8GYHgD7Wxie6mkFZJeO8XP2LoI6Jjagds+R9KTku6OiA8//3O2LgK6p9az6LbP1GLc2yPi\nqWZHAlBKnWfRLelBSXMRcV/zIwEopc4RfLWkWyWtsb2n+vhRw3MBKKDO3mSvSup7aRgA3cMr2YDE\nCBxIjMCBxAgcSIzAgcQIHEiMwIHECBxIbKB3k3VRr9drba0290Fre72ZmZnW1jr//PNbW6vt/eS6\nhiM4kBiBA4kROJAYgQOJETiQGIEDiRE4kBiBA4kROJBYnYsuftn2X2z/tdq66FdtDAZgeHVeqnpE\n0pqI+Li6fPKrtv8QEX9ueDYAQ6pz0cWQ9HH15ZnVBxsbAGOg7sYHE7b3SDosaWdEnHLrItuztmdL\nDwng9NQKPCKOR8TlkqYkrbL93VPcZmtErIyIlaWHBHB6BnoWPSI+kPSSpHXNjAOgpDrPol9g+7zq\n869IWitpf9ODARhenWfRL5L0iO0JLf4P4fcR8WyzYwEooc6z6H/T4p7gAMYMr2QDEiNwIDECBxIj\ncCAxAgcSI3AgMQIHEiNwIDEvvhu08C+1eTtpAW1u8bNz587W1mrT2rVrW12vza2SIsL9bsMRHEiM\nwIHECBxIjMCBxAgcSIzAgcQIHEiMwIHECBxIrHbg1bXR37DN9diAMTHIEfwuSXNNDQKgvLo7m0xJ\nul7StmbHAVBS3SP4/ZLukfRpg7MAKKzOxgc3SDocEbv63I69yYCOqXMEXy3pRttvS3pc0hrbj37+\nRuxNBnRP38Aj4t6ImIqIpZLWS3oxIm5pfDIAQ+Pv4EBidfYm+5+IeFnSy41MAqA4juBAYgQOJEbg\nQGIEDiRG4EBiBA4kRuBAYgQOJMbWRZDU7jZJ09PTra3V6/VaW0uSNm/e3NpabF0EfMEROJAYgQOJ\nETiQGIEDiRE4kBiBA4kROJAYgQOJ1bpkU3VF1Y8kHZd0jCunAuNhkGuy/SAi3m9sEgDFcYoOJFY3\n8JA0Y3uX7Y1NDgSgnLqn6N+PiEO2vyVpp+39EfHKyTeowid+oENqHcEj4lD138OSnpa06hS3Yesi\noGPqbD74Vdvnnvhc0g8lvdn0YACGV+cU/duSnrZ94va/i4jnG50KQBF9A4+InqTvtTALgML4MxmQ\nGIEDiRE4kBiBA4kROJAYgQOJETiQGIEDiQ3yfvAvvC1btrS63szMTGtrtbl10bXXXtvaWk888URr\na3URR3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEiNwILFagds+z/YO2/ttz9m+qunBAAyv7ktV\nfy3p+Yj4ie2zJJ3d4EwACukbuO2vS7pa0k8lKSKOSjra7FgASqhzir5M0nuSHrb9hu1t1fXRAXRc\nncDPkHSFpAciYoWkTyRt/vyNbG+0PWt7tvCMAE5TncDnJc1HxGvV1zu0GPxnsHUR0D19A4+IdyUd\ntL28+tY1kvY1OhWAIuo+i36npO3VM+g9Sbc3NxKAUmoFHhF7JHHqDYwZXskGJEbgQGIEDiRG4EBi\nBA4kRuBAYgQOJEbgQGIEDiTG3mQDWFhYaHW96enpVtdrS5v7hW3atKm1tbqIIziQGIEDiRE4kBiB\nA4kROJAYgQOJETiQGIEDiRE4kFjfwG0vt73npI8Pbd/dxnAAhtP3paoR8ZakyyXJ9oSkQ5Kebngu\nAAUMeop+jaR/RsS/mhgGQFmDvtlkvaTHTvUD2xslbRx6IgDF1D6CV5se3CjplG8FYusioHsGOUW/\nTtLuiPh3U8MAKGuQwDfo/5yeA+imWoFX+4GvlfRUs+MAKKnu3mSfSPpGw7MAKIxXsgGJETiQGIED\niRE4kBiBA4kROJAYgQOJETiQmCOi/C+135M06FtKvynp/eLDdEPW+8b9Gp3vRMQF/W7USOCnw/Zs\n1neiZb1v3K/u4xQdSIzAgcS6FPjWUQ/QoKz3jfvVcZ15DA6gvC4dwQEU1onAba+z/ZbtA7Y3j3qe\nEmwvsf2S7X2299q+a9QzlWR7wvYbtp8d9Swl2T7P9g7b+23P2b5q1DMNY+Sn6NW11v+hxSvGzEt6\nXdKGiNg30sGGZPsiSRdFxG7b50raJenH436/TrD9c0krJX0tIm4Y9Tyl2H5E0h8jYlt1odGzI+KD\nUc91urpwBF8l6UBE9CLiqKTHJd004pmGFhHvRMTu6vOPJM1JmhztVGXYnpJ0vaRto56lJNtfl3S1\npAclKSKOjnPcUjcCn5R08KSv55UkhBNsL5W0QtJro52kmPsl3SPp01EPUtgySe9Jerh6+LGtuh7h\n2OpC4KnZPkfSk5LujogPRz3PsGzfIOlwROwa9SwNOEPSFZIeiIgVkj6RNNbPCXUh8EOSlpz09VT1\nvbFn+0wtxr09IrJckXa1pBttv63Fh1NrbD862pGKmZc0HxEnzrR2aDH4sdWFwF+XdKntZdWTGusl\nPTPimYZm21p8LDcXEfeNep5SIuLeiJiKiKVa/Ld6MSJuGfFYRUTEu5IO2l5efesaSWP9pOige5MV\nFxHHbN8h6QVJE5Ieioi9Ix6rhNWSbpX0d9t7qu/9MiKeG+FM6O9OSdurg01P0u0jnmcoI/8zGYDm\ndOEUHUBDCBxIjMCBxAgcSIzAgcQIHEiMwIHECBxI7L+TBJXy5M2KZQAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x622c04b320>"
+       "<matplotlib.figure.Figure at 0x967ba90>"
       ]
      },
      "metadata": {},
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -128,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.82 s ± 22.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1 loop, best of 3: 4.36 s per loop\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -164,14 +164,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "354 ms ± 13.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1 loop, best of 3: 364 ms per loop\n"
      ]
     }
    ],
@@ -187,10 +187,82 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats\n",
+    "\n",
+    "def rule_k_nearest_neighbors(k, training, train_labels, test):\n",
+    "    M = test.shape[0]\n",
+    "    dists = dist_vec(training, test) #N*M\n",
+    "    k_smallest = np.argpartition(dists, k, axis=0)[:k,:] #k*M\n",
+    "    shape = k_smallest.shape\n",
+    "    labels = train_labels[k_smallest.flatten()].reshape(k,M)\n",
+    "    return stats.mode(labels, axis=0)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.0\n",
+      "0.013888888888888888\n"
+     ]
+    }
+   ],
+   "source": [
+    "def two_digit_error(i, j, k=1):\n",
+    "    pos_train = (y_train == i) | (y_train == j)\n",
+    "    X_train_ij = X_train[pos_train]\n",
+    "    y_train_ij = y_train[pos_train]\n",
+    "    pos_test = (y_test == i) | (y_test == j)\n",
+    "    X_test_ij = X_test[pos_test]\n",
+    "    y_test_ij = y_test[pos_test]\n",
+    "\n",
+    "    return np.count_nonzero(rule_k_nearest_neighbors(k, X_train_ij, y_train_ij, X_test_ij) - y_test_ij) / y_test_ij.size\n",
+    "\n",
+    "print(two_digit_error(1,3))\n",
+    "print(two_digit_error(1,7))\n",
+    "print(two_digit_error(3,9))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 2.5 Generalize to k-nearest neighbors "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k =  1, error = 0.0139\n",
+      "k =  3, error = 0.0069\n",
+      "k =  5, error = 0.0069\n",
+      "k =  9, error = 0.0069\n",
+      "k = 17, error = 0.0069\n",
+      "k = 33, error = 0.0208\n"
+     ]
+    }
+   ],
+   "source": [
+    "ks = [1,3,5,9,17,33]\n",
+    "for k in ks:\n",
+    "    print(\"k = {:2d}, error = {:5.4f}\".format(k, two_digit_error(3, 9, k)))"
    ]
   },
   {
@@ -199,6 +271,47 @@
    "source": [
     "## 3 Cross-validation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]\n",
+      " [3 4 5]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[False,  True,  True],\n",
+       "       [False, False, False]], dtype=bool)"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(6).reshape(2,3)\n",
+    "print(a)\n",
+    "a[[[0,1],[0,2]]]\n",
+    "(a==1) | (a== 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -217,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
